# LearningLLM

./: .doit.db.db  README.md  dodo.py  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
.github/: codecov.yaml
.github/workflows/: dependency-updates.yml
LearningLLM/: __init__.py  main.py
LearningLLM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LearningLLM/providers/: __init__.py  base.py  cohere_provider.py  google_provider.py  huggingface_provider.py  openai_provider.py
LearningLLM/utils/: constants.py  logger.py  utils.py
backend/: api.py  main.py
backend/utils/: api_body_definitions.py  constants.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: Home.tsx  Tabs.tsx  page.tsx
frontend/src/app/BasicPrompting/: BasicPromptingPage.tsx  FileUpload.tsx  ModelSelector.tsx  PromptInput.tsx  ProviderSelector.tsx  ResponseOutput.tsx
frontend/src/app/RAG/: RAGPage.tsx  RAGQuery.tsx  RAGUpload.tsx  SegmentationOptions.tsx  VectorStoreSelection.tsx
tests/: conftest.py  test_google.py  test_huggingface.py  test_openai.py  test_utils.py
